--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Prework Study Guide</title>
   </head>
   <body>
-    <header id="header">
+    <header id="header 2 test">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+
     </header>
     <main>
       <!-- Student code goes here -->
