--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Prework Study Guide</title>
   </head>
   <body>
-    <header id="header 2 test">
+    <header id="header test 2">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
 
