added JavaSript array and for lop

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <title>Prework Study Guide</title>
   </head>
   <body>
-    <header id="head">
+    <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
 
     </header>
     <main>
@@ -40,6 +41,7 @@
         <h2>JavaScript</h2>
         <ul>
           <li>we add our learning topics about JavaScript in here</li>
+          <li>Why we connect script.js file at the footer?we did this befor for CSS at the head.</li>
         </ul>
       </section>
     </main>
@@ -47,5 +49,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
