Add JavaScript code in applytacion and update HTML file

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
         <h2>JavaScript</h2>
         <ul>
           <li>we add our learning topics about JavaScript in here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
           <li>Why we connect script.js file at the footer?we did this befor for CSS at the head.</li>
         </ul>
       </section>
