update the html file

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
         <ul>
           <li>git status: checks what branch we are currently on</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>How save the file to GitHub:</li>
+          <li>1, git add -A</li>
+          <li>2, git commit -m "put your message here"</li>
+          <li>3, git pull origin main</li>
+          <li>4, git push origin ""file</li>
         </ul>
       </section>
       <section class="card" id="javascript-section" >
