--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <title>Prework Study Guide</title>
   </head>
   <body>
-    <header id="head">
+    <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
 
     </header>
     <main>
@@ -34,12 +35,20 @@
         <ul>
           <li>git status: checks what branch we are currently on</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>How save the file to GitHub:</li>
+          <li>1, git add -A</li>
+          <li>2, git commit -m "put your message here"</li>
+          <li>3, git pull origin main</li>
+          <li>4, git push origin ""file</li>
         </ul>
       </section>
       <section class="card" id="javascript-section" >
         <h2>JavaScript</h2>
         <ul>
           <li>we add our learning topics about JavaScript in here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>Why we connect script.js file at the footer?we did this befor for CSS at the head.</li>
         </ul>
       </section>
     </main>
@@ -47,5 +56,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
